Add HashJoinNode (#20)